# INF3995-Backend

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  deploy-backend.sh  docker-compose-eh.yml  docker-compose.yml  old Dockerfile abdel  requirements.txt  start-app.sh
app/: crud.py  (+5 more)
app/ros_nodes/src/backend_server/: .coveragerc  package.xml  setup.cfg  setup.py
app/ros_nodes/src/backend_server/backend_server/: app.py  constants.py  main.py  run.py
app/ros_nodes/src/backend_server/backend_server/api/: base.py
app/ros_nodes/src/backend_server/backend_server/api/examples/: crud.py  routes_crud.py
app/ros_nodes/src/backend_server/backend_server/classes/: common.py  constants.py  singleton.py
app/ros_nodes/src/backend_server/backend_server/common/: __init__.py
app/ros_nodes/src/backend_server/backend_server/db/: insertions.py  models.py  populate.py  queries.py  session.py  utils.py
app/ros_nodes/src/backend_server/backend_server/logic/: __init__.py  logs.py  map.py  mission.py  robots.py
app/ros_nodes/src/backend_server/backend_server/models/: logs.py  map.py  mission.py  robots.py
app/ros_nodes/src/backend_server/backend_server/nodes/: logs.py  map.py
app/ros_nodes/src/backend_server/backend_server/schemas/: schemas.py  something_type.py
app/ros_nodes/src/backend_server/backend_server/tests/: conftest.py  test_app.py
app/ros_nodes/src/backend_server/backend_server/websocket/: base.py  emitter.py  events.py  listener.py  logs.py  status.py
app/ros_nodes/src/backend_server/test/: test_copyright.py  test_flake8.py  test_pep257.py
(+99 files in other folders)
