<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>backend_server</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>fastapi</exec_depend>
  <exec_depend>contextlib</exec_depend>
  <exec_depend>pydantic</exec_depend>
  <exec_depend>datetime</exec_depend>
  <exec_depend>sqlalchemy</exec_depend>
  <exec_depend>databases</exec_depend>
  <exec_depend>typing</exec_depend>
  <exec_depend>time</exec_depend>
  <exec_depend>sqlalchemy</exec_depend>

  <!-- <exec_depend>glob</exec_depend>
  <exec_depend>os</exec_depend> -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
